--- a/huggingface-demo/requirements.txt
+++ b/huggingface-demo/requirements.txt
@@ -1,9 +1,4 @@
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-plotly>=5.0.0
-scikit-learn>=0.24.0
-gradio>=5.5.0
-gdown>=4.7.0
-openpyxl>=3.0.
+gradio==4.19.2
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
